--- a/index.html
+++ b/index.html
@@ -1,77 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ONG Esperança Viva</title>
-  <link rel="stylesheet" href="css/variables.css">
-  <link rel="stylesheet" href="css/layout.css">
-  <link rel="stylesheet" href="css/components.css">
-  <link rel="stylesheet" href="css/forms.css">
-  <script defer src="js/scripts.js"></script>
+  <link rel="stylesheet" href="css/variables.css" />
+  <link rel="stylesheet" href="css/layout.css" />
+  <link rel="stylesheet" href="css/components.css" />
+  <link rel="stylesheet" href="css/forms.css" />
 </head>
-
 <body>
-  <header>
-    <h1>ONG Esperança Viva</h1>
-    <button class="menu-btn">☰ Menu</button>
-    <nav>
-      <ul>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#projetos">Projetos</a></li>
-        <li><a href="#cadastro">Cadastro</a></li>
-        <li><a href="#contato">Contato</a></li>
-      </ul>
+  <header class="site-header">
+    <div class="brand">
+      <img src="assets/images/hero.jpg" alt="Logo ONG">
+      <h1>ONG Esperança Viva</h1>
+    </div>
+
+    <nav class="nav" role="navigation" aria-label="Menu principal">
+      <a href="#/" data-route>Início</a>
+      <a href="#/projetos" data-route>Projetos</a>
+      <a href="#/cadastro" data-route>Cadastro</a>
     </nav>
+
+    <div class="header-actions">
+      <button class="menu-toggle" id="menu-toggle" aria-expanded="false" aria-controls="mobile-menu">☰</button>
+    </div>
   </header>
 
-  <main class="container">
-    <!-- Seção Sobre -->
-    <section id="sobre" class="card">
-      <h2>Sobre Nós</h2>
-      <p>A ONG Esperança Viva atua promovendo ações sociais voltadas para famílias em situação de vulnerabilidade. Nosso objetivo é transformar vidas por meio da solidariedade e do trabalho em equipe.</p>
-    </section>
+  <!-- mobile menu (injetado on click) -->
+  <div id="mobile-menu" style="display:none;background:var(--card);padding:12px;position:fixed;top:76px;right:16px;z-index:200;border-radius:10px;box-shadow:var(--shadow)"></div>
 
-    <!-- Seção Projetos -->
-    <section id="projetos" class="card">
-      <h2>Projetos</h2>
-      <ul>
-        <li><strong>Alimente Esperança:</strong> Distribuição de cestas básicas.</li>
-        <li><strong>Educar para o Futuro:</strong> Apoio escolar para crianças e jovens.</li>
-        <li><strong>Saúde em Ação:</strong> Acompanhamento de famílias com atendimento médico voluntário.</li>
-      </ul>
-    </section>
-
-    <!-- Seção Cadastro -->
-    <section id="cadastro" class="card">
-      <h2>Cadastro de Voluntários</h2>
-      <form id="cadastroForm">
-        <label for="nome">Nome completo</label>
-        <input type="text" id="nome" name="nome" required>
-
-        <label for="email">E-mail</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="cpf">CPF</label>
-        <input type="text" id="cpf" name="cpf">
-
-        <label for="telefone">Telefone</label>
-        <input type="text" id="telefone" name="telefone">
-
-        <label for="cep">CEP</label>
-        <input type="text" id="cep" name="cep">
-
-        <label for="mensagem">Mensagem</label>
-        <textarea id="mensagem" name="mensagem" rows="4"></textarea>
-
-        <button type="submit" class="btn">Enviar</button>
-        <div id="form-messages"></div>
-      </form>
-    </section>
+  <main class="container" id="app">
+    <!-- SPA content injected here -->
   </main>
 
-  <footer>
-    <p>© <span id="year"></span> ONG Esperança Viva — Todos os direitos reservados.</p>
+  <footer class="site-footer">
+    <div class="container">
+      <small>© <span id="year"></span> ONG Esperança Viva — Todos os direitos reservados.</small>
+    </div>
   </footer>
+
+  <!-- scripts (modulares) -->
+  <script src="js/storage.js"></script>
+  <script src="js/templates.js"></script>
+  <script src="js/router.js"></script>
+  <script src="js/formModule.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
