--- a/projetos.html
+++ b/projetos.html
@@ -1,108 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Projetos — ONG Esperança Viva</title>
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
-  <!-- Cabeçalho -->
+  <a class="skip-link" href="#main">Pular para o conteúdo</a>
   <header class="site-header">
-    <div class="container header-inner">
-      <div class="logo">ONG Esperança Viva</div>
-      <ul class="nav">
-        <li><a href="index.html">Início</a></li>
-        <li><a href="projetos.html" class="active">Projetos</a></li>
-        <li><a href="cadastro.html">Cadastro</a></li>
-      </ul>
+    <div class="container">
+      <a href="index.html"><img src="../assets/images/logo.png" alt="Logo ONG" class="logo" /></a>
+      <nav aria-label="Menu principal">
+        <ul class="nav-list">
+          <li><a href="index.html">Início</a></li>
+          <li><a href="projetos.html">Projetos</a></li>
+          <li><a href="cadastro.html">Cadastro</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
-  <!-- Conteúdo principal -->
-  <main class="container">
-    <section>
-      <h2 class="section-title">Nossos Projetos</h2>
-      <p>Conheça as principais ações que desenvolvemos em prol da comunidade e descubra como você pode participar.</p>
+  <main id="main" class="container">
+    <h1>Projetos sociais</h1>
+    <p>Conheça nossos projetos, voluntariado e formas de doar.</p>
 
-      <div class="grid">
-        <!-- Projeto 1 -->
-        <article class="card">
-          <img src="assets/images/Projeto2.jpg" alt="Distribuição de alimentos" class="card-img">
-          <h3>Projeto Alimentar com Amor</h3>
-          <p>Distribuímos cestas básicas e refeições para famílias em situação de vulnerabilidade social. Toda ajuda é bem-vinda, seja com doações de alimentos ou apoio na logística de entrega.</p>
-        </article>
-
-        <!-- Projeto 2 -->
-        <article class="card">
-          <img src="assets/images/Projeto3.jpg" alt="Crianças estudando" class="card-img">
-          <h3>Educação que Transforma</h3>
-          <p>Oferecemos reforço escolar gratuito e oficinas de leitura para crianças e adolescentes. Nosso objetivo é garantir que cada criança tenha acesso à educação de qualidade.</p>
-        </article>
-
-        <!-- Projeto 3 -->
-        <article class="card">
-          <img src="assets/images/Projeto4.jpg" alt="Mutirão ambiental" class="card-img">
-          <h3>Verde Esperança</h3>
-          <p>Promovemos ações ambientais, como plantio de árvores e campanhas de limpeza urbana. Acreditamos que cuidar do meio ambiente é cuidar das futuras gerações.</p>
-        </article>
-      </div>
+    <section aria-labelledby="lista-projetos">
+      <h2 id="lista-projetos">Projetos em destaque</h2>
+      <ul class="projects-grid" role="list">
+        <li class="card">
+          <img src="../assets/images/projeto1.jpg" alt="Voluntários distribuindo alimentos" />
+          <h3>Projeto Alimentos</h3>
+          <p>Descrição resumida do projeto, objetivos e indicadores.</p>
+          <a class="btn" href="#donate" aria-label="Saiba mais sobre Projeto Alimentos">Saiba mais</a>
+        </li>
+        <li class="card">
+          <img src="../assets/images/projeto2.jpg" alt="Crianças em aula de reforço" />
+          <h3>Projeto Educação</h3>
+          <p>Descrição resumida do projeto, objetivos e indicadores.</p>
+          <a class="btn" href="#donate">Saiba mais</a>
+        </li>
+      </ul>
     </section>
 
-    <!-- Voluntariado -->
-    <section>
-      <h2 class="section-title">Seja um Voluntário</h2>
-      <div class="card">
-        <p>Junte-se a nossa equipe de voluntários e contribua com o seu tempo e talento em nossos projetos. Cada ação faz diferença na vida de muitas pessoas!</p>
-        <ul>
-          <li>📚 Ajudar em oficinas educativas e reforço escolar;</li>
-          <li>🌳 Participar de mutirões ambientais e eventos sociais;</li>
-          <li>🤝 Apoiar campanhas de arrecadação e distribuição;</li>
-          <li>🎉 Colaborar na organização de eventos beneficentes.</li>
-        </ul>
-        <a href="cadastro.html" class="cta">Cadastre-se como voluntário</a>
-      </div>
-    </section>
-
-    <!-- Doações -->
-    <section>
-      <h2 class="section-title">Apoie com Doações</h2>
-      <div class="grid">
-        <div class="card">
-          <h3>Doações Financeiras</h3>
-          <p>Contribua com qualquer valor para manter nossos projetos ativos. Sua doação ajuda a alimentar, educar e transformar vidas.</p>
-          <p><strong>Pix:</strong> doacoes@ongesperancaviva.org.br</p>
-        </div>
-
-        <div class="card">
-          <h3>Doações de Itens</h3>
-          <p>Também recebemos roupas, brinquedos, materiais escolares e alimentos não perecíveis.</p>
-          <p><strong>Ponto de Coleta:</strong> Rua da Esperança, 100 — São Paulo/SP</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Conteúdo multimídia -->
-    <section>
-      <h2 class="section-title">Veja Nossas Ações em Movimento</h2>
-      <div class="card" style="text-align:center;">
-        <video width="100%" controls poster="assets/images/Projeto1.jpg">
-          <source src="assets/videos/acao-social.mp4" type="video/mp4">
-          Seu navegador não suporta a reprodução de vídeo.
-        </video>
-        <p>Assista a um resumo das últimas ações realizadas pela ONG Esperança Viva e inspire-se a fazer parte dessa transformação!</p>
-      </div>
+    <section id="donate" aria-labelledby="doe-title">
+      <h2 id="doe-title">Como doar</h2>
+      <p>Explicação sobre doações online, campanhas e prestação de contas.</p>
+      <form class="donation-form" action="#" method="post" novalidate>
+        <label for="valor">Valor (R$)</label>
+        <input id="valor" name="valor" type="number" min="1" required />
+        <label for="nome">Nome no cartão</label>
+        <input id="nome" name="nome" type="text" required />
+        <button class="btn" type="submit">Doar</button>
+      </form>
     </section>
   </main>
 
-  <!-- Rodapé -->
   <footer class="site-footer">
-    © 2025 ONG Esperança Viva — Todos os direitos reservados.
+    <div class="container">
+      <p>© <span id="year2"></span> ONG Esperança Viva</p>
+    </div>
   </footer>
+
+  <script>document.getElementById('year2').textContent = new Date().getFullYear();</script>
 </body>
 </html>
