--- a/cadastro.html
+++ b/cadastro.html
@@ -1,115 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Cadastro — ONG Esperança Viva</title>
-
-  <!-- Fonte e estilos -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
-
-  <!-- Script com máscaras e validação -->
-  <script defer src="js/scripts.js"></script>
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
-  <!-- Cabeçalho -->
+  <a class="skip-link" href="#main">Pular para o conteúdo</a>
   <header class="site-header">
-    <div class="container header-inner">
-      <div class="logo">ONG Esperança Viva</div>
-      <ul class="nav">
-        <li><a href="index.html">Início</a></li>
-        <li><a href="projetos.html">Projetos</a></li>
-        <li><a href="cadastro.html" class="active">Cadastro</a></li>
-      </ul>
+    <div class="container">
+      <a href="index.html"><img src="../assets/images/logo.png" alt="Logo ONG" class="logo" /></a>
+      <nav aria-label="Menu principal">
+        <ul class="nav-list">
+          <li><a href="index.html">Início</a></li>
+          <li><a href="projetos.html">Projetos</a></li>
+          <li><a href="cadastro.html">Cadastro</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
-  <!-- Conteúdo principal -->
-  <main class="container">
-    <section class="form-section">
-      <h2 class="section-title">Cadastre-se como Voluntário</h2>
-      <p>Faça parte dessa rede de solidariedade! Preencha o formulário abaixo e venha transformar vidas conosco.</p>
+  <main id="main" class="container">
+    <h1>Cadastro de voluntário / doador</h1>
+    <form id="cadastroForm" action="#" method="post" novalidate>
+      <fieldset>
+        <legend>Dados pessoais</legend>
+        <label for="nome">Nome completo</label>
+        <input id="nome" name="nome" type="text" required />
 
-      <form id="cadastroForm" class="form-card">
-        <!-- DADOS PESSOAIS -->
-        <fieldset>
-          <legend>Dados Pessoais</legend>
+        <label for="email">E-mail</label>
+        <input id="email" name="email" type="email" required />
 
-          <label for="nome">Nome Completo*</label>
-          <input id="nome" name="nome" type="text" placeholder="Digite seu nome completo" required>
+        <label for="cpf">CPF</label>
+        <input id="cpf" name="cpf" type="text" inputmode="numeric" maxlength="14" required />
 
-          <label for="cpf">CPF*</label>
-          <input id="cpf" name="cpf" type="text" placeholder="000.000.000-00" maxlength="14" required>
+        <label for="telefone">Telefone</label>
+        <input id="telefone" name="telefone" type="tel" inputmode="tel" maxlength="15" required />
 
-          <label for="nascimento">Data de Nascimento*</label>
-          <input id="nascimento" name="nascimento" type="date" required>
-        </fieldset>
+        <label for="nascimento">Data de nascimento</label>
+        <input id="nascimento" name="nascimento" type="date" required />
 
-        <!-- CONTATO -->
-        <fieldset>
-          <legend>Contato</legend>
+      </fieldset>
 
-          <label for="email">E-mail*</label>
-          <input id="email" name="email" type="email" placeholder="exemplo@email.com" required>
+      <fieldset>
+        <legend>Endereço</legend>
+        <label for="cep">CEP</label>
+        <input id="cep" name="cep" type="text" maxlength="9" required />
+        <label for="endereco">Endereço</label>
+        <input id="endereco" name="endereco" type="text" required />
+        <label for="cidade">Cidade</label>
+        <input id="cidade" name="cidade" type="text" required />
+        <label for="estado">Estado</label>
+        <select id="estado" name="estado" required>
+          <option value="">Selecione</option>
+          <option value="SP">SP</option>
+          <option value="RJ">RJ</option>
+          <!-- adicionar demais estados -->
+        </select>
+      </fieldset>
 
-          <label for="telefone">Telefone*</label>
-          <input id="telefone" name="telefone" type="tel" placeholder="(11) 99999-9999" maxlength="15" required>
-        </fieldset>
-
-        <!-- ENDEREÇO -->
-        <fieldset>
-          <legend>Endereço</legend>
-
-          <label for="cep">CEP*</label>
-          <input id="cep" name="cep" type="text" placeholder="00000-000" maxlength="9" required>
-
-          <label for="endereco">Rua*</label>
-          <input id="endereco" name="endereco" type="text" placeholder="Digite o nome da rua" required>
-
-          <label for="numero">Número*</label>
-          <input id="numero" name="numero" type="text" placeholder="Ex: 123" required>
-
-          <label for="bairro">Bairro*</label>
-          <input id="bairro" name="bairro" type="text" placeholder="Digite o bairro" required>
-
-          <label for="cidade">Cidade*</label>
-          <input id="cidade" name="cidade" type="text" placeholder="Digite a cidade" required>
-
-          <label for="estado">Estado*</label>
-          <input id="estado" name="estado" type="text" placeholder="Ex: SP" maxlength="2" required>
-        </fieldset>
-
-        <!-- PARTICIPAÇÃO -->
-        <fieldset>
-          <legend>Participação</legend>
-
-          <label for="interesse">Área de Interesse*</label>
-          <select id="interesse" name="interesse" required>
-            <option value="">Selecione...</option>
-            <option>Educação</option>
-            <option>Meio Ambiente</option>
-            <option>Ação Social</option>
-            <option>Eventos</option>
-            <option>Doações</option>
-          </select>
-
-          <label for="mensagem">Mensagem</label>
-          <textarea id="mensagem" name="mensagem" rows="4" placeholder="Conte um pouco sobre você e sua motivação."></textarea>
-        </fieldset>
-
-        <div id="form-messages"></div>
-
-        <button type="submit" class="cta">Enviar Cadastro</button>
-      </form>
-    </section>
+      <button type="submit" class="btn">Enviar cadastro</button>
+    </form>
   </main>
 
-  <!-- Rodapé -->
   <footer class="site-footer">
-    © <span id="year">2025</span> ONG Esperança Viva — Todos os direitos reservados.
+    <div class="container">
+      <p>© <span id="year3"></span> ONG Esperança Viva</p>
+    </div>
   </footer>
+
+  <script src="../js/masks.js"></script>
+  <script src="../js/app.js"></script>
+  <script>document.getElementById('year3').textContent = new Date().getFullYear();</script>
 </body>
 </html>
